--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-        <div th:fragment="footer">footer 영역입니다.</div>
+        <div class="footer" th:fragment="footer">
+            <footer class="page-footer font-small cyan darken-3">
+                <div class="footer-copyright text-center py-3">
+                    2021 Shopping Mall Example WebSite
+                </div>
+            </footer>
+        </div>
 </body>
 </html>
