css와 html 파일 연결

--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -22,6 +22,7 @@
         <th:block layout:fragment="css"></th:block>
 
         <div th:replace="fragments/header::header"></div>
-        <div layout:fragment="content"></div>
+        <div layout:fragment="content" class="content">
+        </div>
         <div th:replace="fragments/footer::footer"></div>
 </body>
