--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -20,7 +20,7 @@
 
     <script th:inline="javascript">
         $(document).ready(function(){
-            var errorMessage = [[${errorMessage}]];
+            const errorMessage = [[${errorMessage}]];
             if (errorMessage != null) {
                 alert(errorMessage);
             }
